# packrat

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml.example
.github/workflows/: ci.yml
docs/: BRANDING_AND_LICENSES.md  RESPONSE_AND_FEATURE_ROADMAP.md  USER_MANUAL.md
ebpf/: packrat_socket.bpf.c
ebpf/include/: packrat_bpf_helpers.h
packaging/logrotate/: packrat-socket-collector
packaging/systemd/: packrat-socket-collector.service
packaging/tmpfiles.d/: packrat-socket-collector.conf
plugins/: example_modbus.lua  example_mqtt.lua  example_myproto.lua
scripts/: build-ebpf-socket-collector.sh  install-ebpf-socket-collector.sh  test-ebpf-socket-collector.sh
src/: app.rs  capture.rs  craft.rs  dissector.rs  dynamic.rs  event.rs  export.rs  filter.rs  lib.rs  main.rs  packet.rs  pcap_replay.rs  scan.rs  strings.rs  tabs.rs  topology.rs  traceroute.rs  ui.rs
src/analysis/: alert_center.rs  carving.rs  case_export.rs  diff.rs  display_filter.rs  dns_transactions.rs  encrypted_insight.rs  evidence_vault.rs  geo.rs  graph_cluster.rs  graph_scoring.rs  helper_process.rs  incident.rs  industrial_policy.rs  ioc.rs  ipv6_fragments.rs  jobs.rs  key_shelf.rs  mod.rs  net_registry.rs  notebook.rs  operator_graph.rs  packet_compare.rs  packet_fields.rs  path_reconstruction.rs  pivot.rs  profile_workload.rs  protocol_workbench.rs  quic_scope.rs  route_ledger.rs  rules.rs  runtime_guard.rs  socket_ebpf.rs  socket_scope.rs  stream.rs  telemetry.rs  timeline.rs  tls.rs  traffic_latch.rs  vlan.rs  (+2 more)
src/capture/: helper.rs  live.rs  mod.rs  simulated.rs
src/model/: evidence.rs  graph.rs  graph_evidence.rs  graph_types.rs  hosts.rs  mod.rs  project.rs  tags.rs
src/net/: flow.rs  inspector.rs  lua_plugin.rs  mod.rs  packet.rs  parser.rs  security.rs  tree.rs
src/sim/: capture.rs  dynamic.rs  generator.rs  mod.rs  scenario.rs  strings.rs
src/storage/: case_bundle.rs  graph_store.rs  mod.rs  project_store.rs  session_store.rs  theme_store.rs
src/ui/: ascii.rs  autopsy_overlay.rs  help.rs  helpers.rs  iface_picker.rs  incident_overlay.rs  mod.rs  project_manager.rs  search_overlay.rs  theme.rs  theme_picker.rs  view_menu.rs
src/ui/tabs/: analysis.rs  craft.rs  diff.rs  dynamic.rs  flows.rs  graph_panels.rs  hosts.rs  investigate.rs  mod.rs  notebook.rs  objects.rs  operator_graph.rs  packets.rs  rules.rs  scanner.rs  security.rs  settings.rs  strings.rs  tls_tab.rs  topology.rs  traceroute.rs  visualize.rs  workbench.rs
tests/: capture_helper_tests.rs  dns_transaction_tests.rs  event_tests.rs  filter_tests.rs  industrial_policy_tests.rs  ioc_tests.rs  ipv6_fragment_tests.rs  notebook_tests.rs  packet_compare_tests.rs  packet_fields_tests.rs  scenario_tests.rs  security_coverage_tests.rs  security_policy_tests.rs  socket_ebpf_tests.rs  stream_reassembly_tests.rs  stream_tools_tests.rs
