[package]
name = "packrat-tui"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal packet analyzer and network forensics tool: live capture, IDS/IOC/YARA, TLS intelligence, PCAP diff, host tagging, case export, Wireshark-style filters"
license = "MIT"
readme = "README.md"
repository = "https://github.com/0xbadcaffe/packrat"
homepage = "https://github.com/0xbadcaffe/packrat"
documentation = "https://docs.rs/packrat-tui"
keywords = ["network", "packet", "tui", "security", "reverse-engineering"]
categories = ["command-line-utilities", "network-programming", "visualization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "BUILD.md",
    "LICENSE",
    "assets/packrat-screenshot.svg",
    ".cargo/config.toml.example",
]

[[bin]]
name = "packrat"
path = "src/main.rs"

[dependencies]
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
tokio      = { version = "1", features = ["full"] }
futures    = "0.3"
rand       = "0.8"
chrono     = { version = "0.4", features = ["clock"] }
anyhow     = "1.0"
dirs-next  = "2.0"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
pcap       = { version = "2.0", optional = true }
md5        = "0.7"
mlua       = { version = "0.10", features = ["lua54", "vendored"] }

[features]
default        = []
real-capture   = ["dep:pcap"]

[profile.release]
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
