[package]
name = "packrat-tui"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal network analyzer, deep packet inspection, and penetration detection tool: live capture, IDS/IOC/YARA, TLS intelligence, PCAP diff, VLAN intelligence, and case export"
license = "MIT"
readme = "README.md"
repository = "https://github.com/0xbadcaffe/packrat"
homepage = "https://github.com/0xbadcaffe/packrat"
documentation = "https://docs.rs/packrat-tui"
keywords = ["network", "packet", "tui", "security", "dpi"]
categories = ["command-line-utilities", "network-programming", "visualization"]
include = [
    "src/**/*",
    "ebpf/**/*",
    "scripts/**/*",
    "packaging/**/*",
    "docs/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "BUILD.md",
    "LICENSE",
    "assets/packrat-screenshot.svg",
    ".cargo/config.toml.example",
]

[lib]
name = "packrat_tui"
path = "src/lib.rs"

[[bin]]
name = "packrat"
path = "src/main.rs"

[dependencies]
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
tokio      = { version = "1", features = ["full"] }
futures    = "0.3"
rand       = "0.8"
chrono     = { version = "0.4", features = ["clock"] }
anyhow     = "1.0"
dirs-next  = "2.0"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
pcap       = { version = "2.0", optional = true }
md5        = "0.7"
sha2       = "0.10"
mlua       = { version = "0.10", features = ["lua54", "vendored"] }
aya        = { version = "=0.13.1", optional = true }
libc       = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"

[features]
default        = []
real-capture   = ["dep:pcap"]
ebpf-sockets   = ["dep:aya", "dep:libc"]

[dev-dependencies]
insta   = { version = "1", features = ["yaml"] }
rstest  = "0.22"

[profile.release]
opt-level = 3
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 1
